# tweetdelete-rs

./: .gitignore  Cargo.toml  README.md  config.yaml
.github/workflows/: ci.yaml
src/: cli.rs  client.rs  config.rs  errors.rs  main.rs  twitter.rs
src/twitter/: status.rs
